BlockState Part II
fixed crashes when constructing a meta block due to vanilla forcing blockstates to call createBlockState() before the constructor in block is even done forcing me to do hacky shit.

Tested BlockStates with enum cheese